--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.2.RELEASE</version>
+        <version>1.4.5.RELEASE</version>
     </parent>
 
   <properties>
@@ -74,24 +74,21 @@
         </dependency>
         
   </dependencies>
-<build>  
-    <plugins>  
-  
-        <plugin>  
-            <groupId>org.apache.maven.plugins</groupId>  
-            <artifactId>maven-assembly-plugin</artifactId>  
-            <configuration>  
-                <archive>  
-                    <manifest>  
-                        <mainClass>org.lzj.rent_crawler.App</mainClass>  
-                    </manifest>  
-                </archive>  
-                <descriptorRefs>  
-                    <descriptorRef>jar-with-dependencies</descriptorRef>  
-                </descriptorRefs>  
-            </configuration>  
-        </plugin>  
-  
-    </plugins>  
-</build> 
+ <build>
+  <plugins>
+	  	<plugin>
+	   <artifactId>maven-compiler-plugin</artifactId>
+	   <configuration>
+	      <source>${java.version}</source>
+	      <target>${java.version}</target>
+	   </configuration>
+	</plugin>
+	
+<!-- 	编译jar包必须 -->
+	<plugin>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-maven-plugin</artifactId>
+	</plugin>
+</plugins>
+</build>
 </project>
