添加订阅信息的操作接口

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.mail.host=smtp.126.com
-spring.mail.username=liuzengjiong@126.com
+spring.mail.username=liuzengjiong_send@126.com
 spring.mail.nickname=刘增炯
-#spring.mail.password=nepvyoaavxcpbbfj
-spring.mail.password=lzjde126yx
+spring.mail.password=send126
 spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.auth=true  
 spring.mail.properties.mail.smtp.starttls.enable=true  
@@ -11,3 +10,6 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.freemarker.suffix=.ftl
 spring.freemarker.templateEncoding=UTF-8
 spring.freemarker.templateLoaderPath=classpath:templates/
+
+server.port=8888
+server.context-path=/rent
