--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.mail.host=smtp.126.com
-spring.mail.username=liuzengjiong_send@126.com
+spring.mail.host=smtp.qq.com
+spring.mail.username=liuzengjiong_rent@qq.com
 spring.mail.nickname=刘增炯
-spring.mail.password=send126
+spring.mail.password=bwyjnbalmzqdbddd
 spring.mail.default-encoding=UTF-8
-spring.mail.properties.mail.smtp.auth=true  
-spring.mail.properties.mail.smtp.starttls.enable=true  
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true 
 spring.mail.properties.mail.smtp.starttls.required=true
 
 spring.freemarker.suffix=.ftl
